test/zinc_source/compile_errors/callables/16_super_assign_non_captured.zn
// expected-error: 'out x' expects a captured outer variable 'x'
fn main() {
    x = 1
    out x
}
